2da version con header y footer de bootstrap

--- a/index.html
+++ b/index.html
@@ -156,50 +156,56 @@
       </article>
     </main>
     <footer>
-      <div class="containerfooterall">
-        <div class="containerfooter">
-          <div class="colum1">
-            <h2>Asociacion Capacitarte</h2>
-            <p>
-              Nos dedicamos a enseñar y transmitir, el uso de las maniobras de
-              R.C.P + D.E.A, y tambien dictamos cursos de primeros auxilios,
-              para Contamos con Credenciales vigentes, gestión privada
-            </p>
-          </div>
-          <div class="colum2">
-            <h2>Redes Sociales</h2>
-            <div class="fila">
-              <img src="assets/icons/facebook_logo_icon_147291.ico" />
-              <label>Siguenos En Facebook</label>
-            </div>
-            <div class="fila">
-              <img src="assets/icons/Gmail_29991.ico" />
-              <label>Envianos Un Correo</label>
-            </div>
-            <div class="fila">
-              <img src="assets/icons/Whatsapp_37229.ico" />
-              <label>Envianos Un WhatsApp</label>
-            </div>
-          </div>
-          <div class="colum3">
-            <h2>Informacion De Contacto</h2>
-            <div class="fila2">
-              <img src="assets/images/brand_google_maps_icon_157937.png" />
-              <label>Argentina,Buenos Aires</label>
-            </div>
-            <div class="fila2">
-              <img
-                src="assets/images/976604-appliances-cell-phone-cellphone-mobile-mobilephone-phone-smartphone_106569.png"
-              />
-              <label>+5491123762102</label>
-            </div>
-            <div class="fila2">
-              <img
-                src="assets/images/email-envelope-outline-shape-with-rounded-corners_icon-icons.com_56530.png"
-              />
-              <label>sergiodam@hotmail.es</label>
-            </div>
-          </div>
+      <div class="container-sm">
+        <h2>
+          <img
+            src="./assets/images/medical-symbol.png"
+            alt=""
+            width="36"
+            height="36"
+          />
+          Asociacion Capacitarte
+        </h2>
+        <p>
+          Nos dedicamos a enseñar y transmitir, el uso de las maniobras de R.C.P
+          + D.E.A, y tambien dictamos cursos de primeros auxilios, para Contamos
+          con Credenciales vigentes, gestión privada
+        </p>
+      </div>
+
+      <div class="container-sm">
+        <h2 class="h2footer">Redes Sociales</h2>
+        <div class="fila">
+          <img src="/assets/icons/facebook_logo_icon_147291.ico" />
+          <label>Siguenos En Facebook</label>
+        </div>
+        <div class="fila">
+          <img src="/assets/icons/Gmail_29991.ico" />
+          <label>Envianos Un Correo</label>
+        </div>
+        <div class="fila">
+          <img src="/assets/icons/Whatsapp_37229.ico" />
+          <label>Envianos Un WhatsApp</label>
+        </div>
+      </div>
+
+      <div class="container-sm">
+        <h2>Informacion De Contacto</h2>
+        <div class="fila2">
+          <img src="/assets/images/brand_google_maps_icon_157937.png" />
+          <label>Argentina,Buenos Aires</label>
+        </div>
+        <div class="fila2">
+          <img
+            src="/assets/images/976604-appliances-cell-phone-cellphone-mobile-mobilephone-phone-smartphone_106569.png"
+          />
+          <label>+5491123762102</label>
+        </div>
+        <div class="fila2">
+          <img
+            src="/assets/images/email-envelope-outline-shape-with-rounded-corners_icon-icons.com_56530.png"
+          />
+          <label>sergiodam@hotmail.es</label>
         </div>
         <div class="containerlowfooter">
           <div class="smalltext">
