--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--SEO-->
+    <meta name="description" content="Formamos y Capacitamos Profesionales De La Salud">
+    <meta name="keywords" content="CURSOS, ENFERMERIA, ASISTENTE GERIATRICO, SALIDA LABORAL, CAPACITARTE, CAPACITACION, ENFERMERIA, SALUD, GERIATRIA, ASISTENTE DE ENFERMERIA, MASAJISTA, FORMACION">
+     <link rel="apple-touch-icon" href="assets/icons/nurse-cross_icon-icons.com_53939.ico">
+     <meta property="og:title" content="Asociacion Capacitarte 2022">
+     <meta property="og:description" content="Formamos y Capacitamos Profesionales De La Salud">
+     <meta property="og:image" content="https://midominio.com/img/periodic-table-of-html-elements.png">
+     <meta property="og:url" content="https://midominio.com/index.html">
+    <link rel="stylesheet" href="assets/styles.css">   <!--Etiquetas Para redes Sociales  -->
+    <!--SEO-->
     <!--Icono de la pagina-->
     <link
       rel="shortcut icon"
