entrega tp final

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ src="../assets/images/medical-symbol.png"alt=""width="36" height="36"class="d-in
         <div class="container-sm">
           <h2>
             <img
-              src="./assets/images/medical-symbol.png"
+              src="../assets/images/medical-symbol.png"
               alt=""
               width="36"
               height="36"
@@ -187,16 +187,16 @@ src="../assets/images/medical-symbol.png"alt=""width="36" height="36"class="d-in
         <div class="container-sm">
           <h2 class="h2footer">Redes Sociales</h2>
           <div class="fila">
-            <img src="/assets/icons/facebook_logo_icon_147291.ico" />
+            <a href="https://www.facebook.com/asociacioncapacitarte"><img src="/assets/icons/facebook_logo_icon_147291.ico" /></a>
             <label>Siguenos En Facebook</label>
           </div>
           <div class="fila">
-            <img src="/assets/icons/Gmail_29991.ico" />
+            <a href="mailto:dambro184@gmail.com"><img src="/assets/icons/Gmail_29991.ico" /></a>
             <label>Envianos Un Correo</label>
           </div>
           <div class="fila">
-            <img src="/assets/icons/Whatsapp_37229.ico" />
-            <label>Envianos Un WhatsApp</label>
+             <a href="https://api.WhatsApp.com/send?phone=5491123762102&text=Buenas Tardes"><img src="/assets/icons/Whatsapp_37229.ico" /></a>
+            <label>  Envianos Un WhatsApp</label>
           </div>
         </div>
 
@@ -207,15 +207,15 @@ src="../assets/images/medical-symbol.png"alt=""width="36" height="36"class="d-in
             <label>Argentina,Buenos Aires</label>
           </div>
           <div class="fila2">
-            <img
+            <a href="tel:5491123762102"><img 
               src="/assets/images/976604-appliances-cell-phone-cellphone-mobile-mobilephone-phone-smartphone_106569.png"
-            />
+            /></a>
             <label>+5491123762102</label>
           </div>
           <div class="fila2">
-            <img
+            <a href="mailto:dambro184@gmail.com"><img
               src="/assets/images/email-envelope-outline-shape-with-rounded-corners_icon-icons.com_56530.png"
-            />
+            /></a>
             <label>sergiodam@hotmail.es</label>
           </div>
           <div class="smalltext1">
